<resources>
    <string name="app_name">YGOMobile</string>
    <string name="crash_title">应用程序崩溃</string>
    <string name="crashed">w(ﾟДﾟ)w.. YGOMobile崩溃啦！</string>
    <string name="crash_dialog_comment_prompt">YGOMobile崩溃了喵，请将错误日志通过邮件发送给俺们喵，有其他想法可以在下面反馈喵!</string>
    <string name="ignore_chain">Ignore All Timing</string>
    <string name="react_chain">Show All Timing</string>
    <string name="crash_dialog_ok_toast">Thanks!</string>
    <string name="access_denied">Access Denied!</string>
    <string name="choose_folder">Choose a folder:</string>
    <string name="choose_file">Choose file:</string>
    <string name="choose_all">Choose file or directory:</string>
    <string name="root_dir">Root dir</string>
    <string name="server_user_name">User name:</string>
    <string name="server_name">Name:</string>
    <string name="server_ip">IP Address:</string>
    <string name="server_port">Port:</string>
    <string name="server_info">Host passwd(optional):</string>
    <string name="action_new_server">Add new server</string>
    <string name="action_edit_server">Edit server</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_connect">Connect</string>
    <string name="toast_delete">%1$s deleted</string>
    <string name="exit_hint">"Press back again to quit YGOMobile!"</string>
    <string name="card_img_update_title">Card image update</string>
    <string name="card_img_check_hint">Update card images now？</string>
    <string name="button_update">Update</string>
    <string name="button_create">Create</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_hide">Hide</string>
    <string name="button_stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="combobox_choose_item">Select one item</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Donate</string>
    <string name="action_dl_card_image">Update card image</string>
    <string name="action_reset">Reset</string>
    <string name="action_play">Start game</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_none">(none)</string>
    <string name="action_filter_string_type">Type</string>
    <string name="action_filter_string_race">Race</string>
    <string name="action_filter_string_property">Attribute</string>
    <string name="action_filter_string_more">More</string>
    <string name="action_filter_type_spell">Spell</string>
    <string name="action_filter_type_spell_normal">Normal</string>
    <string name="action_filter_type_spell_quick_play">Quick play</string>
    <string name="action_filter_type_spell_ritual">Ritual</string>
    <string name="action_filter_type_spell_equip">Equip</string>
    <string name="action_filter_type_spell_field">Field</string>
    <string name="action_filter_type_spell_continuous">Continuous</string>
    <string name="action_filter_type_trap">Trap</string>
    <string name="action_filter_type_trap_normal">Normal</string>
    <string name="action_filter_type_trap_continuous">Continuous</string>
    <string name="action_filter_type_trap_counter">Counter</string>
    <string name="action_filter_type_monster">Monster</string>
    <string name="action_filter_type_monster_normal">Normal</string>
    <string name="action_filter_type_monster_effect">Effect</string>
    <string name="action_filter_type_monster_fusion">Fusion</string>
    <string name="action_filter_type_monster_ritual">Ritual</string>
    <string name="action_filter_type_monster_synchro">Synchro</string>
    <string name="action_filter_type_monster_xyz">XYZ</string>
    <string name="action_filter_type_monster_tunner">Tunner</string>
    <string name="action_filter_type_monster_gemini">Gemini</string>
    <string name="action_filter_type_monster_union">Union</string>
    <string name="action_filter_type_monster_token">Token</string>
    <string name="action_filter_type_monster_spirit">Spirit</string>
    <string name="action_filter_type_monster_flip">Flip</string>
    <string name="action_filter_type_monster_toon">Toon</string>
    <string name="action_filter_type_monster_pendulum">Pendulum</string>
    <string name="action_filter_property_land">地</string>
    <string name="action_filter_property_water">水</string>
    <string name="action_filter_property_hot">炎</string>
    <string name="action_filter_property_wind">风</string>
    <string name="action_filter_property_light">光</string>
    <string name="action_filter_property_dark">暗</string>
    <string name="action_filter_property_god">神</string>
    <string name="action_filter_race_warrior">战士</string>
    <string name="action_filter_race_magic">魔法使</string>
    <string name="action_filter_race_angel">天使</string>
    <string name="action_filter_race_devil">恶魔</string>
    <string name="action_filter_race_ud">不死</string>
    <string name="action_filter_race_machanical">机械</string>
    <string name="action_filter_race_land">地</string>
    <string name="action_filter_race_water">水</string>
    <string name="action_filter_race_hot">炎</string>
    <string name="action_filter_race_rock">岩石</string>
    <string name="action_filter_race_birds">鸟兽</string>
    <string name="action_filter_race_plant">植物</string>
    <string name="action_filter_race_insect">昆虫</string>
    <string name="action_filter_race_thunder">雷</string>
    <string name="action_filter_race_dragon">龙</string>
    <string name="action_filter_race_orc">兽</string>
    <string name="action_filter_race_orc_warrior">兽战士</string>
    <string name="action_filter_race_dinosaur">恐龙</string>
    <string name="action_filter_race_fish">鱼</string>
    <string name="action_filter_race_sea_otter">海龙</string>
    <string name="action_filter_race_reptile">爬虫</string>
    <string name="action_filter_race_telekenesis">念动力</string>
    <string name="action_filter_race_devine_beast">幻神兽</string>
    <string name="action_filter_race_bramna">创造神</string>
    <string name="action_filter_race_phantom_dragon">幻龙</string>
    <string name="action_filter_ot_ocg">OCG</string>
    <string name="action_filter_ot_tcg">TCG</string>
    <string name="action_filter_ot_ocgtcg">OCG/TCG</string>
    <string name="action_filter_atk">Attack</string>
    <string name="action_filter_def">Defense</string>
    <string name="card_search_hint">Please enter card name or code</string>
    <string name="action_filter_level">Level or Rank</string>
    <string name="action_filter_effect">Effect</string>
    <string name="range_to">to</string>
    <string name="item_type_text">Card Type：</string>
    <string name="item_ot_text">TCG/OCG：</string>
    <string name="item_name_text">Name：</string>
    <string name="item_level_text">Level：</string>
    <string name="item_race_text">Race：</string>
    <string name="item_attr_text">Attribute：</string>
    <string name="item_atk_text">Attack：</string>
    <string name="item_def_text">Defense：</string>
    <string name="item_des_text">Card Info：</string>
    <string name="item_wiki_text">Card Wiki：</string>
    <string name="wiki_hint_text">&lt;&lt;p>&lt;a href="wiki">&lt;u>来自ourocg.cn的链接&lt;/u>&lt;/a></string>
    <string name="donate">Donate</string>
    <string name="support_us_des">YGOMobile属于个人开源项目，您的支持将会让我更加努力优化软件质量，改进软件服务</string>
    <string name="support_via">您可以通过以下方式对我们进行捐助：</string>
    <string name="support_extra">如果这不是您的常用设备，您也可以用其他手机扫描下面二维码进行捐助</string>
    <string name="support_method_alipay_wap">通过wap网页进行捐助</string>
    <string name="support_method_alipay_mobile_installed">通过已安装的手机钱包进行捐助</string>
    <string name="support_method_alipay_mobile_not_installed">提示下载手机钱包后进行捐助</string>
    <string name="settings_common">Common Settings</string>
    <string name="settings_game">Game Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_common_sub_common">Common</string>
    <string name="settings_about_sub_about">About</string>
    <string name="settings_common_card_image_network_pref">2/3G网络下不下载卡图</string>
    <string name="settings_game_enable_sound_effect">Enable sound effect</string>
    <string name="settings_game_screen_orientation">Lock screen in duel</string>
    <string name="settings_game_font_antialias">Font antialias</string>
    <string name="settings_game_laboratory">Laboratory</string>
    <string name="settings_game_laboratory_des">Contains lately unstable features</string>
    <string name="settings_game_lab_pendulum_scale">pendulum scale</string>
    <string name="settings_game_lab_pendulum_scale_des">Show pendulum scale graphically</string>
    <string name="settings_game_font_antialias_summary">Disable this option can increase the frame rate</string>
    <string name="settings_about_author_pref">Author</string>
    <string name="settings_about_proj_loc">Project link</string>
    <string name="settings_about_version_pref">Version</string>
    <string name="settings_about_opensource_pref">License</string>
    <string name="settings_about_check_update">Check update</string>
    <string name="settings_about_no_update">Lastest version already！</string>
    <string name="settings_about_change_log">Change log</string>
    <string name="settings_about_new_version">New version</string>
    <string name="settings_game_card_quality">Card texture quality</string>
    <string name="settings_game_card_path">Card Image path</string>
    <string name="settings_game_font_name">Font list</string>
    <string name="settings_game_res_path">Resource path</string>
    <string name="settings_category_diy">DIY</string>
    <string name="settings_game_diy_cover">Game Background</string>
    <string name="settings_game_diy_card_back">Card back</string>
    <string name="settings_game_diy_card_db">Use your own card database</string>
    <string name="settings_game_reset_card_db">Reset card database</string>
    <string name="settings_game_reset_card_db_confirm">Sure to reset card database？</string>
    <string name="settings_game_reset_card_db_des">Use internal database</string>
    <string name="settings_game_diy_card_db_des">User custom databse</string>
    <string name="settings_game_diy_des">Current image：</string>
    <string name="settings_game_immersive_mode_summary">Hide virtual navigation key in game</string>
    <string name="settings_game_immersive_mode">Immersive Mode</string>
    <string name="settings_about_feedback">Feed back</string>
    <string name="settings_game_diy_history_des">History image：</string>
    <string name="settings_game_cover">Game cover</string>
    <string name="copying_image">Copying image</string>
    <string name="searching_image_directory">Scanning card image folder...</string>
    <string name="adding_image_download_task">Add to download list...</string>
    <string name="password">Password</string>
    <string name="server_ip_hint">"0.0.0.0"</string>
    <string name="title_activity_crop">CropActivity</string>
    <string name="title_activity_image_dladd">ImageDLAddActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings_game_card_back">Card back</string>
    <string name="image_not_load_toast">Unable to load specified image</string>
    <string name="adding_image_download_count_task">Add to download list.(%1$d/%2$d)</string>
    <string name="image_is_downloading">%1$d images is download, Click to view</string>
    <string name="image_download_label">Card image download</string>
    <string name="image_count_progress">%1$d/%2$d</string>
    <string name="image_dl_failed">Image download failed</string>
    <string name="card_image_already_downloading_hint">Card image is already updating!</string>
    <string name="card_image_dl_not_avail">can not dowdnload images when your are using custom card database!</string>
    <string name="settings_game_opengl">OpenGL</string>
</resources>