<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/filter_group_race" >
        <item
            android:id="@+id/action_race_none"
            android:orderInCategory="0"
            android:showAsAction="never"
            android:title="@string/action_filter_none"/>
        <item
            android:id="@+id/action_race_warrior"
            android:orderInCategory="1"
            android:showAsAction="never"
            android:title="@string/action_filter_race_warrior"/>
        <item
            android:id="@+id/action_race_magic"
            android:orderInCategory="2"
            android:showAsAction="never"
            android:title="@string/action_filter_race_magic"/>
        <item
            android:id="@+id/action_race_angel"
            android:orderInCategory="3"
            android:showAsAction="never"
            android:title="@string/action_filter_race_angel"/>
        <item
            android:id="@+id/action_race_devil"
            android:orderInCategory="4"
            android:showAsAction="never"
            android:title="@string/action_filter_race_devil"/>
        <item
            android:id="@+id/action_race_ud"
            android:orderInCategory="5"
            android:showAsAction="never"
            android:title="@string/action_filter_race_ud"/>
        <item
            android:id="@+id/action_race_machanical"
            android:orderInCategory="6"
            android:showAsAction="never"
            android:title="@string/action_filter_race_machanical"/>
        <item
            android:id="@+id/action_race_water"
            android:orderInCategory="7"
            android:showAsAction="never"
            android:title="@string/action_filter_race_water"/>
        <item
            android:id="@+id/action_race_hot"
            android:orderInCategory="8"
            android:showAsAction="never"
            android:title="@string/action_filter_race_hot"/>
        <item
            android:id="@+id/action_filter_race_rock"
            android:orderInCategory="9"
            android:showAsAction="never"
            android:title="@string/action_filter_race_rock"/>
        <item
            android:id="@+id/action_race_birds"
            android:orderInCategory="10"
            android:showAsAction="never"
            android:title="@string/action_filter_race_birds"/>
        <item
            android:id="@+id/action_race_plant"
            android:orderInCategory="11"
            android:showAsAction="never"
            android:title="@string/action_filter_race_plant"/>
        <item
            android:id="@+id/action_race_insect"
            android:orderInCategory="12"
            android:showAsAction="never"
            android:title="@string/action_filter_race_insect"/>
        <item
            android:id="@+id/action_race_thunder"
            android:orderInCategory="13"
            android:showAsAction="never"
            android:title="@string/action_filter_race_thunder"/>
        <item
            android:id="@+id/action_race_dragon"
            android:orderInCategory="14"
            android:showAsAction="never"
            android:title="@string/action_filter_race_dragon"/>
        <item
            android:id="@+id/action_race_orc"
            android:orderInCategory="15"
            android:showAsAction="never"
            android:title="@string/action_filter_race_orc"/>
        <item
            android:id="@+id/action_race_orc_warrior"
            android:orderInCategory="16"
            android:showAsAction="never"
            android:title="@string/action_filter_race_orc_warrior"/>
        <item
            android:id="@+id/action_race_dinosaur"
            android:orderInCategory="17"
            android:showAsAction="never"
            android:title="@string/action_filter_race_dinosaur"/>
        <item
            android:id="@+id/action_race_fish"
            android:orderInCategory="18"
            android:showAsAction="never"
            android:title="@string/action_filter_race_fish"/>
        <item
            android:id="@+id/action_race_sea_otter"
            android:orderInCategory="19"
            android:showAsAction="never"
            android:title="@string/action_filter_race_sea_otter"/>
        <item
            android:id="@+id/action_race_reptile"
            android:orderInCategory="20"
            android:showAsAction="never"
            android:title="@string/action_filter_race_reptile"/>
        <item
            android:id="@+id/action_race_telekenesis"
            android:orderInCategory="21"
            android:showAsAction="never"
            android:title="@string/action_filter_race_telekenesis"/>
        <item
            android:id="@+id/action_race_devine_beast"
            android:orderInCategory="22"
            android:showAsAction="never"
            android:title="@string/action_filter_race_devine_beast"/>
        <item
            android:id="@+id/action_race_bramna"
            android:orderInCategory="23"
            android:showAsAction="never"
            android:title="@string/action_filter_race_bramna"/>
        <item
            android:id="@+id/action_race_phantom_dragon"
            android:orderInCategory="24"
            android:showAsAction="never"
            android:title="@string/action_filter_race_phantom_dragon"/>
    </group>

</menu>