<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="0dp" >

    <RelativeLayout
        android:id="@+id/overlay_detail"
        android:layout_width="180dip"
        android:layout_height="180dip"
        android:layout_centerInParent="true"
        android:background="@drawable/overlay_back"
        android:visibility="gone">
        <TextView
            android:id="@+id/cancelChainView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip"
            android:text="@string/cancel"
            android:clickable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/refreshView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dip"
            android:text="@string/refresh_texture"
            android:clickable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/ignoreChainView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:text="@string/ignore_chain"
            android:clickable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/reactChainView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:text="@string/react_chain"
            android:clickable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/overlay_internal"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_centerInParent="true"
        android:background="@drawable/overlay_internal" >

        <TextView
            android:id="@+id/textview_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cancel"
            android:clickable="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />
    </RelativeLayout>

</RelativeLayout>